classDiagram
    class Owner {
        +name: str
        +pets: List~Pet~
        +add_pet(pet)
        +get_pet_by_name(pet_name) Pet
        +get_all_tasks() List~Task~
        +get_all_pending_tasks() List~Task~
    }

    class Pet {
        +name: str
        +species: str
        +care_notes: str
        +tasks: List~Task~
        +update_notes(notes)
        +add_task(task)
        +get_tasks() List~Task~
        +get_pending_tasks() List~Task~
    }

    class Task {
        +description: str
        +time: str
        +frequency: str
        +due_date: date
        +completed: bool
        +mark_complete()
        +mark_incomplete()
    }

    class Scheduler {
        +owner: Owner
        +get_all_tasks() List~Task~
        +sort_by_time(tasks) List~Task~
        +filter_tasks(pet_name, completed) List
        +get_todays_schedule() List~Task~
        +get_pending_schedule() List~Task~
        +mark_task_complete(pet_name, task_description, task_time) bool
        +detect_conflicts() List~str~
    }

    Owner "1" --> "0..*" Pet : has
    Pet "1" --> "0..*" Task : stores
    Scheduler "1" --> "1" Owner : reads
    Scheduler ..> Task : sorts and filters
